<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Unirse">

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="476dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvtexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ir_mapa_anterior" />

        <TextView
            android:id="@+id/tvnactividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_actividad" />

        <TextView
            android:id="@+id/tvdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_actividad" />

        <TextView
            android:id="@+id/tvNoparticipantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/participante_actividad" />

        <TextView
            android:id="@+id/tvcreador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/autor_actividad" />

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_actividad" />

        <TextView
            android:id="@+id/tvhora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora_actividad"
            android:text="TextView" />

        <Button
            android:id="@+id/btnunirse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnunirse" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>